## 秒传 前端先要知道能不能**秒传**》file hash 判重》弱预检：size+ext查表筛选，可以考虑头尾hash但是要加表字段没有做》强预检：前端计算文件hash，后端先查表核对hash，分片合并后再核对
